# EMath

./: .gitignore  .gitmodules  README.md  doxygen.conf  etest  meson.build
.github/workflows/: pages.yml
assets/: crosswin.txt  custom.css  emath.desktop  header.html
doc/def/: doxygen.def
doc/docbook/: annotated.xml  classEParserTest.xml  classEParserTest__coll__graph.dot  classefc_1_1Application.xml  classefc_1_1IWindow.xml  classefc_1_1Lexer.xml  classefc_1_1OWindow.xml  classefc_1_1Parser.xml  classefc_1_1Plane.xml  classefc_1_1Storage.xml  classefc_1_1Terminal.xml  classefc_1_1Window.xml  classemth_1_1Arithmetic.xml  classemth_1_1Monomial.xml  classemth_1_1Polynomial.xml  classemthp_1_1Lexer.xml  classemthp_1_1Parser.xml  emath_8h.xml  emath_8h__incl.dot  emath_8h__incl.md5  emath_8h_source.xml  eparser_8h.xml  eparser_8h__dep__incl.dot  eparser_8h__dep__incl.md5  eparser_8h_source.xml  font_8h.xml  font_8h_source.xml  index.xml  interface_8cpp.xml  interface_8cpp_source.xml  mainpage.xml  namespaceefc.xml  namespaceemthp.xml  src_2emath_8cpp.xml  src_2emath_8cpp__incl.md5  src_2emath_8cpp_source.xml  src_2eparser_8cpp.xml  src_2eparser_8cpp_source.xml  structefc_1_1Token.xml  structemthp_1_1Token.xml  (+6 more)
doc/html/: annotated.html  annotated_dup.js  classEParserTest-members.html  classEParserTest.html  classEParserTest.js  classEParserTest__coll__graph.map  classEParserTest__inherit__graph.map  classEParserTest__inherit__graph.md5  classefc_1_1Application-members.html  classefc_1_1Application.html  classefc_1_1Application.js  classefc_1_1IWindow-members.html  classefc_1_1IWindow.html  classefc_1_1IWindow.js  classefc_1_1IWindow__coll__graph.dot  classefc_1_1Lexer-members.html  classefc_1_1Lexer.html  classefc_1_1Lexer.js  classefc_1_1OWindow-members.html  classefc_1_1OWindow.html  classefc_1_1OWindow.js  classefc_1_1Parser-members.html  classefc_1_1Parser.html  classefc_1_1Parser.js  classefc_1_1Plane-members.html  classefc_1_1Plane.html  classefc_1_1Plane.js  classefc_1_1Storage-members.html  classefc_1_1Storage.html  classefc_1_1Storage.js  classefc_1_1Terminal-members.html  classefc_1_1Terminal.html  classefc_1_1Terminal.js  classefc_1_1Window-members.html  classefc_1_1Window.html  classefc_1_1Window.js  classemth_1_1Arithmetic-members.html  classemth_1_1Arithmetic.html  classemth_1_1Monomial-members.html  classemth_1_1Monomial.html  (+127 more)
doc/html/search/: all_0.js  all_1.js  all_10.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  enums_0.js  enumvalues_0.js  files_0.js  files_2.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  (+15 more)
doc/latex/: annotated.tex  classEParserTest.tex  classEParserTest.tex.tmp  classEParserTest__inherit__graph.dot  classefc_1_1Application.tex  classefc_1_1IWindow.tex  classefc_1_1Lexer.tex  classefc_1_1OWindow.tex  classefc_1_1OWindow__coll__graph.dot  classefc_1_1Parser.tex  classefc_1_1Plane.tex  classefc_1_1Storage.tex  classefc_1_1Terminal.tex  classefc_1_1Window.tex  classemth_1_1Arithmetic.tex  classemth_1_1Monomial.tex  classemth_1_1Polynomial.tex  classemthp_1_1Lexer.tex  classemthp_1_1Parser.tex  emath_8h.tex  emath_8h.tex.tmp  emath_8h__dep__incl.dot  emath_8h_source.tex  eparser_8h.tex  eparser_8h__dep__incl.dot  eparser_8h__incl.dot  eparser_8h_source.tex  files.tex  font_8h.tex  font_8h__dep__incl.dot  font_8h_source.tex  hierarchy.tex  index.tex  interface_8cpp.tex  interface_8cpp__incl.dot  interface_8cpp_source.tex  namespaceefc.tex  namespaceemth.tex  namespaceemthp.tex  namespaces.tex  (+17 more)
doc/man/man3/: EParserTest.3  IWindow.3  KEY_Q.3  Plane.3  R_TOL.3  (+40 more)
doc/perlmod/: DoxyDocs.pm  Makefile  doxyrules.make
doc/rtf/: classEParserTest.rtf  classEParserTest__coll__graph.md5  classefc_1_1Application.rtf  classefc_1_1IWindow.rtf  classefc_1_1Lexer.rtf  classefc_1_1OWindow.rtf  classefc_1_1Parser.rtf  classefc_1_1Plane.rtf  classefc_1_1Storage.rtf  classefc_1_1Terminal.rtf  classefc_1_1Window.rtf  classefc_1_1Window__inherit__graph.dot  classemth_1_1Arithmetic.rtf  classemth_1_1Monomial.rtf  classemth_1_1Polynomial.rtf  classemthp_1_1Lexer.rtf  classemthp_1_1Parser.rtf  emath_8h.rtf  emath_8h_source.rtf  eparser_8h.rtf  eparser_8h__incl.md5  eparser_8h_source.rtf  font_8h.rtf  font_8h_source.rtf  interface_8cpp.rtf  interface_8cpp_source.rtf  namespaceefc.rtf  namespaceemth.rtf  namespaceemthp.rtf  refman.rtf  src_2emath_8cpp.rtf  src_2emath_8cpp_source.rtf  src_2eparser_8cpp.rtf  src_2eparser_8cpp__incl.dot  src_2eparser_8cpp_source.rtf  structefc_1_1Token.rtf  structemthp_1_1Token.rtf  test.rtf  test_2emath_8cpp.rtf  test_2emath_8cpp__incl.md5  (+4 more)
doc/xml/: Doxyfile.xml  classEParserTest.xml  classefc_1_1Application.xml  classefc_1_1IWindow.xml  classefc_1_1Lexer.xml  classefc_1_1OWindow.xml  classefc_1_1Parser.xml  classefc_1_1Plane.xml  classefc_1_1Storage.xml  classefc_1_1Terminal.xml  classefc_1_1Window.xml  classemth_1_1Arithmetic.xml  classemth_1_1Monomial.xml  classemth_1_1Polynomial.xml  classemthp_1_1Lexer.xml  classemthp_1_1Parser.xml  dir_13e138d54eb8818da29c3992edef070a.xml  dir_68267d1309a1af8e8297ef4c3efbcdba.xml  dir_d44c64559bbebec7f509842c48db8b23.xml  emath_8h.xml  eparser_8h.xml  font_8h.xml  index.xml  indexpage.xml  interface_8cpp.xml  namespaceefc.xml  namespaceemth.xml  namespaceemthp.xml  namespacetesting.xml  src_2emath_8cpp.xml  src_2eparser_8cpp.xml  structefc_1_1Token.xml  structemthp_1_1Token.xml  test.xml  test_2emath_8cpp.xml  test_2eparser_8cpp.xml  unionvalue.xml
include/: emath.h  eparser.h  terminal.h
o/: calculator.h  storage.cpp  terminal.cpp
scripts/: benchmark.sh  compile.sh  cross.sh  dist.sh  document.sh  install.sh  setup.sh  test.sh
src/: calculator.cpp  emath.cpp  eparser.cpp  font.h  interface.cpp  shit  terminal.cpp
test/: emath.cpp  eparser.cpp  test  test.cpp
